--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>b55-20260115_045916</title>
-</head>
-<body>
-<h1>🧱 b55-20260115_045916</h1>
-<p>This repo was repaired by C13B0 Cart D2.</p>
-<ul>
-  <li><a href="https://github.com/pewpi-infinity/b55-20260115_045916">🧱 GitHub Repo</a></li>
-  <li><a href="https://pewpi-infinity.github.io/b55-20260115_045916/">👑 Live Page</a></li>
-</ul>
-</body>
-</html>
+<html><body style='background:#000;color:#0f0;'><h1>⚡ b55-20260115_045916</h1><p>INFINITY SEED</p></body></html>
